--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
 
     <script>
         // --- Constantes e Globais ---
-        const apiKey = ""; 
+        const apiKey = "AIzaSyCRFKFo6n-JO-wZ1191cnOHQ6s1zM3voK8"; 
         const QUESTION_TYPES = {
             'MC5': { label: 'Múltipla Escolha (A-E)', options: ['A','B','C','D','E'] },
             'MC4': { label: 'Múltipla Escolha (A-D)', options: ['A','B','C','D'] },
