--- a/index.html
+++ b/index.html
@@ -1218,8 +1218,7 @@
         }
 
         async function callGeminiVision(base64Image) {
-            // Mudamos para a versão pública e estável do modelo para garantir o acesso externo
-            const url = `https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash:generateContent?key=${apiKey}`;
+            const url = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-preview-09-2025:generateContent?key=${apiKey}`;
             
             let formatContext = "";
             for (let i = 1; i <= appState.numQuestions; i++) {
